--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
 
 
         <div class="d-flex justify-between align-centre">
-            <h1 class="logo-heading"> Social App</h1>
-            <a href="" id="sign-out" class="short-link">Log Out?</a>
+            <div>
+                <a href="./index.html" class="text-none">
+                    <h1 class="logo-heading"> Social App</h1>
+                </a>
+            </div>
+
+            <div class="d-flex gap-3">
+                <a href="#" id="user-name" class="text-none"> </a>
+                <a href="" id="sign-out" class="short-link">Log Out?</a>
+            </div>
         </div>
+
+
 
 
         <div class="text-centre mb-5">
@@ -29,6 +39,13 @@
         <div id="all-posts-box">
 
         </div>
+
+
+
+
+
+
+
 
 
 
