--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
 
         <form id="signup-form">
 
-            <!-- <input id="name" type="text" placeholder="Name" required> <br> -->
+            <input id="name" type="text" placeholder="Name" required> <br>
             <input id="email" type="email" placeholder="Email" required> <br>
             <input id="password" type="password" placeholder="Password" required> <br>
             <input id="confirm-password" type="password" placeholder="Confirm Password" required> <br>
