profile picture work completed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </div>
 
             <div class="d-flex gap-3">
-                <a href="#" id="user-name" class="text-none"> </a>
+                <div class="d-flex gap-1">
+                    <img src="" id="profile-pic" class="profile-pic" alt="profile-pic">
+                    <a href="#" id="user-name" class="text-none"> </a>
+                </div>
                 <a href="" id="sign-out" class="short-link">Log Out?</a>
             </div>
         </div>
