--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 
     <div id="signup-box">
 
-        <div class="text-centre mb-3">
+        <div class="text-centre mb-2">
             <a href="./signin.html">
                 <button id="signin" class="button-two"> <i class="fa-solid fa-user"></i> &nbsp; Sign In</button>
             </a>
@@ -37,6 +37,9 @@
             <input id="email" type="email" placeholder="Email" required> <br>
             <input id="password" type="password" placeholder="Password" required> <br>
             <input id="confirm-password" type="password" placeholder="Confirm Password" required> <br>
+            
+            <input type="file" id="profile-pic" class="mt-1" required> <br>
+            <label for="profile-pic" class="para">Upload Profile Picture</label>
 
             <p id="error" class="para"></p>
 
